--- a/package.json
+++ b/package.json
@@ -1,39 +1,62 @@
 {
-  "name": "Complete.Portfolio.Template",
+  "name": "portfolio-site",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint ./src/*",
     "preview": "vite preview",
-    "homepage": "https://github.com/Pfrommer1982/Complete_React_Portfolio",
+    "homepage": "https://github.com/oliver-ryan9008/portfolio-site.git",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
-    "emailjs-com": "^3.2.0",
-    "react": "^18.2.0",
-    "react-color": "^2.19.3",
-    "react-countup": "^6.4.2",
-    "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.4.4",
-    "react-slick": "^0.29.0",
-    "react-thumbnail": "^1.0.0",
-    "slick-carousel": "^1.8.1",
-    "wow.js": "^1.2.2"
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "babel-plugin-macros": "^3.1.0",
+    "emailjs-com": "3.2.0",
+    "react": "18.2.0",
+    "react-color": "2.19.3",
+    "react-countup": "6.4.2",
+    "react-dom": "18.2.0",
+    "react-intersection-observer": "9.4.4",
+    "react-slick": "0.29.0",
+    "react-thumbnail": "1.0.0",
+    "slick-carousel": "1.8.1",
+    "typescript": "5.3.3",
+    "wow.js": "1.2.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "gh-pages": "^5.0.0",
-    "vite": "^4.3.9"
+    "@types/jest": "^29.5.11",
+    "@types/jest-when": "^3.5.5",
+    "@types/react": "18.2.45",
+    "@types/react-dom": "18.2.18",
+    "@typescript-eslint/eslint-plugin": "6.14.0",
+    "@typescript-eslint/parser": "6.14.0",
+    "@vitejs/plugin-react": "4.0.0",
+    "eslint": "8.38.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-config-standard-with-typescript": "43.0.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jest": "27.6.0",
+    "eslint-plugin-n": "16.4.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.5",
+    "eslint-plugin-standard": "5.0.0",
+    "gh-pages": "5.0.0",
+    "jest": "^29.7.0",
+    "jest-each": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
+    "jest-when": "^3.6.0",
+    "vite": "4.3.9"
   }
 }
