grab data from api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,9 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": false,
+
+    /* Type checking */
+    "types": ["vite/client", "node", "jest"],
   },
   "include": ["src", ".eslintrc.cjs", "vite.config.js", "tsconfig.node.json"],
   "references": [{ "path": "./tsconfig.node.json" }]
