--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/node": "^20.10.5",
+    "axios": "^1.6.2",
     "babel-plugin-macros": "^3.1.0",
     "emailjs-com": "3.2.0",
     "react": "18.2.0",
