--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "homepage": "https://oliver-ryan9008.github.io",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -34,6 +33,7 @@
     "wow.js": "1.2.2"
   },
   "devDependencies": {
+    "@types/config": "^3.3.3",
     "@types/jest": "^29.5.11",
     "@types/jest-when": "^3.5.5",
     "@types/react": "18.2.45",
@@ -54,6 +54,7 @@
     "eslint-plugin-react-refresh": "0.4.5",
     "eslint-plugin-standard": "5.0.0",
     "gh-pages": "5.0.0",
+    "http-proxy-middleware": "^2.0.6",
     "jest": "^29.7.0",
     "jest-each": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
